<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:inputType="textPersonName"
        android:text="@string/txtTitle"
        android:textColor="#0003CC"
        android:textSize="38dp"
        app:layout_constraintBottom_toTopOf="@+id/txtAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtAmount"
        android:layout_width="418dp"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/txtAmount"
        android:inputType="textPersonName"
        android:textColorHint="#880033CC"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/radToEuro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <RadioButton
        android:id="@+id/radToEuro"
        android:layout_width="273dp"
        android:layout_height="36dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:text="@string/radToEuro"
        android:textColor="#0003CC"
        android:textColorLink="#0003CC"
        android:textSize="22dp"
        app:layout_constraintBottom_toTopOf="@+id/radToPeso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAmount" />

    <RadioButton
        android:id="@+id/radToPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/radToPeso"
        android:textColor="#0003CC"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/radToCADollars"
        app:layout_constraintStart_toStartOf="@+id/radToEuro"
        app:layout_constraintTop_toBottomOf="@+id/radToEuro" />

    <RadioButton
        android:id="@+id/radToCADollars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/radToCADollars"
        android:textColor="#0003CC"
        android:textSize="22dp"
        app:layout_constraintBottom_toTopOf="@+id/btnConvert"
        app:layout_constraintStart_toStartOf="@+id/radToPeso"
        app:layout_constraintTop_toBottomOf="@+id/radToPeso" />

    <Button
        android:id="@+id/btnConvert"
        android:layout_width="285dp"
        android:layout_height="72dp"
        android:layout_marginStart="73dp"
        android:layout_marginLeft="73dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="73dp"
        android:layout_marginRight="73dp"
        android:text="@string/btnConvert"
        android:textColor="#0003CC"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radToCADollars" />

    <EditText
        android:id="@+id/txtResult"
        android:layout_width="359dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="70dp"
        android:background="@null"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="textPersonName"
        android:textColor="#0003CC"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConvert" />
</androidx.constraintlayout.widget.ConstraintLayout>